# wasm-zlib-benchmark-

./: .gitignore  Cargo.toml  bench-inflate.sh  perf-deflate.sh  perf-inflate.sh
src/: main.rs
