[package]
name = "wasm-zlib-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
miniz_oxide = "0.8.0"
zlib-rs = { path = "../zlib-rs/zlib-rs" }
libz-sys = { version = "1.1.19", default-features = false, features = ["zlib-ng"] } # use libz-ng in libz compat mode

[profile.release]
debug = 2
